--- a/frontal/src/app/components/noticia/noticia.component.scss
+++ b/frontal/src/app/components/noticia/noticia.component.scss
@@ -1,8 +1,32 @@
 :host{
+	p{
+		font-family: Montserrat;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 19px;
+	}
+	h3{
+		font-family: Montserrat;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 24px;
+		letter-spacing: 0.555556px;
+	}
 	.tipo1{
+		width: 100%;
+		height: 330px;
+		h3, p{
+			color: #FFFFFF;
+		}
 		header{
 			img{
 				width: 85%;
+				max-width: 100%;
+				max-height: 270px;
+				background: linear-gradient(180deg, rgba(255, 255, 255, 8.5e-05) -47.68%, rgba(0, 0, 0, 0.706809) 100%);
+				border-radius: 6px;
 			}
 		}
 		body{
@@ -12,37 +36,74 @@
 			color: white;
 		}
 		footer{
-			width: 500px;
+			max-width: 500px;
+			width: 80%;
 			position: relative;
 			top: -88px;
 			margin: 0 0 0 60px;
 			color: white;
+		}
+		@media (width: 320px) {
+			width: 80%;
+			body, footer{
+				margin: unset;
+			}
+		}
+		@media (max-width: 768px) {
+			width: 80%;
+			header > img{
+				width: 100%;
+			}
+			body, footer{
+				margin: unset;
+			}
 		}
 	}
 	.tipo2{
 		display: flex;
-		// flex-direction: column;
-		flex-wrap: wrap;
+		flex-direction: column;
+		width: 40%;
 		header{
-			height: 75px;
-			width: 45%;
 			img{
-				max-width: 100%;
-				max-height: 100%;
+				width: 100%;
+				height: 230px;
+				background: linear-gradient(180deg, rgba(255, 255, 255, 8.5e-05) -47.68%, rgba(0, 0, 0, 0.706809) 100%);
+				border-radius: 6px;
 			}
 		}
 		body{
-			position: relative;
-			top: -90px;
-			margin: 0 0 0 60px;
-			color: white;
+			color: black;
 		}
 		footer{
-			width: 500px;
-			position: relative;
-			top: -88px;
-			margin: 0 0 0 60px;
-			color: white;
+			width: auto;
+			color:black;
+			max-width: 500px;
+		}
+		@media (width: 320px) {
+			width: 80%;
+		}
+		@media (max-width: 768px) {
+			width: 80%;
+		}
+	}
+	.tipo3{
+		margin-top: 50px;
+		display: flex;
+		flex-direction: column;
+		width: 30%;
+		header{
+			img{
+				width: 100%;
+				height: 150px;
+				background: linear-gradient(180deg, rgba(255, 255, 255, 8.5e-05) -47.68%, rgba(0, 0, 0, 0.706809) 100%);
+				border-radius: 6px;
+			}
+		}
+		@media (width: 320px) {
+			width: 80%;
+		}
+		@media (max-width: 768px) {
+			width: 80%;
 		}
 	}
 }
