--- a/frontal/src/styles.scss
+++ b/frontal/src/styles.scss
@@ -49,8 +49,8 @@ table {
 }
 
 body{
-	width: 100%;
-	height: 100%;
+	// width: 100%;
+	// height: 100%;
 }
 
 
@@ -77,7 +77,6 @@ h4 {
 	font-size: 28px;
 	line-height: 34px;
 	letter-spacing: 0.777778px;
-	color: #FFFFFF;	
 }
 
 h4 {
@@ -103,3 +102,51 @@ h6 {
 // @media (min-width: 1440px) { 
 
 // }
+
+ve-modal {
+	/* modals are hidden by default */
+	display: none;
+}
+.ve-modal {
+	/* modal container fixed across whole screen */
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	/* z-index must be higher than .jw-modal-background */
+	z-index: 1000;
+	
+	/* enables scrolling for tall modals */
+	overflow: auto;
+	/* Border */
+	width: 100%;
+}
+.ve-modal .ve-modal-body {
+	margin: auto;
+	margin-top: 5em !important;
+	padding: 20px;
+	width: 60%;
+	background: grey;
+}
+.ve-modal-body span {
+	font-size: 22px;
+}
+.ve-modal-background {
+	/* modal background fixed across whole screen */
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	/* semi-transparent black */
+	background-color: #000;
+	opacity: 0.4;
+	
+	/* z-index must be below .jw-modal and above everything else */
+	z-index: 900;
+}
+body.ve-modal-open {
+	verflow: hidden;
+}
