--- a/frontal/src/app/leer-noticia/leer-noticia.component.scss
+++ b/frontal/src/app/leer-noticia/leer-noticia.component.scss
@@ -1,4 +1,15 @@
 :host{
+	.botonModal{
+		position: absolute;
+		top: 50%;
+		left: 90%;
+		width: 72px;
+		height: 72px;
+		border: none;
+		background: #F15F41;
+		box-shadow: 0px 6px 20px rgba(241, 95, 65, 0.6);
+		border-radius: 50%;
+	}
 	.contenido{
 		fecha{
 			position: absolute;
